--- a/project_notebook.html
+++ b/project_notebook.html
@@ -15229,7 +15229,7 @@ allennlp 2.10.1 requires transformers&lt;4.21,&gt;=4.1, but you have transformer
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Fill in your user name and key from creating the kaggle account and API token file</span>
 <span class="kn">import</span> <span class="nn">json</span>
 <span class="n">kaggle_username</span> <span class="o">=</span> <span class="s2">&quot;hossamkhair&quot;</span>
-<span class="n">kaggle_key</span> <span class="o">=</span> <span class="s2">&quot;79d257130d1d7e7ecfe107fe91b9f2a0&quot;</span>
+<span class="n">kaggle_key</span> <span class="o">=</span> <span class="s2">&quot;********&quot;</span>
 
 <span class="c1"># Save API token the kaggle.json file</span>
 <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="s2">&quot;/root/.kaggle/kaggle.json&quot;</span><span class="p">,</span> <span class="s2">&quot;w&quot;</span><span class="p">)</span> <span class="k">as</span> <span class="n">f</span><span class="p">:</span>
